--- a/src/Shared/HandyControl_Shared/Themes/Styles/Base/BadgeBaseStyle.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/Base/BadgeBaseStyle.xaml
@@ -6,12 +6,31 @@
 
     <ControlTemplate x:Key="BadgeTextTemplate" TargetType="hc:Badge">
         <hc:SimplePanel>
-            <ContentPresenter />
+            <ContentPresenter>
+                <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                <ContentPresenter.Resources>
+                    <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                           TargetType="TextBlock">
+                        <Setter Property="Foreground"
+                                Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                    </Style>
+                </ContentPresenter.Resources>
+            </ContentPresenter>
             <Border x:Name="Border" Visibility="{TemplateBinding ShowBadge,Converter={StaticResource Boolean2VisibilityConverter}}" RenderTransformOrigin="0.5 0.5" Style="{StaticResource BorderCircular}" Margin="{TemplateBinding BadgeMargin}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                 <Border.RenderTransform>
                     <ScaleTransform />
                 </Border.RenderTransform>
-                <ContentPresenter ContentSource="Text" Margin="{TemplateBinding Padding}" />
+                <ContentPresenter ContentSource="Text"
+                                  Margin="{TemplateBinding Padding}">
+                    <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                    <ContentPresenter.Resources>
+                        <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                               TargetType="TextBlock">
+                            <Setter Property="Foreground"
+                                    Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                        </Style>
+                    </ContentPresenter.Resources>
+                </ContentPresenter>
             </Border>
         </hc:SimplePanel>
         <ControlTemplate.Triggers>
@@ -28,14 +47,32 @@
 
     <ControlTemplate x:Key="BadgeDotTemplate" TargetType="hc:Badge">
         <hc:SimplePanel>
-            <ContentPresenter />
+            <ContentPresenter>
+                <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                <ContentPresenter.Resources>
+                    <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                           TargetType="TextBlock">
+                        <Setter Property="Foreground"
+                                Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                    </Style>
+                </ContentPresenter.Resources>
+            </ContentPresenter>
             <Border Visibility="{TemplateBinding ShowBadge,Converter={StaticResource Boolean2VisibilityConverter}}" Margin="{TemplateBinding BadgeMargin}" Width="10" Height="10" CornerRadius="5" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" />
         </hc:SimplePanel>
     </ControlTemplate>
 
     <ControlTemplate x:Key="BadgeProcessingTemplate" TargetType="hc:Badge">
         <hc:SimplePanel>
-            <ContentPresenter />
+            <ContentPresenter>
+                <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                <ContentPresenter.Resources>
+                    <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                           TargetType="TextBlock">
+                        <Setter Property="Foreground"
+                                Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                    </Style>
+                </ContentPresenter.Resources>
+            </ContentPresenter>
             <Ellipse Visibility="{TemplateBinding ShowBadge,Converter={StaticResource Boolean2VisibilityConverter}}" Height="10" Width="10" Fill="{TemplateBinding Background}" RenderTransformOrigin="0.5 0.5" Margin="{TemplateBinding BadgeMargin}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
                 <Ellipse.OpacityMask>
                     <RadialGradientBrush>
