--- a/src/Shared/HandyControl_Shared/Themes/Styles/Base/ShieldBaseStyle.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/Base/ShieldBaseStyle.xaml
@@ -21,7 +21,20 @@
                             <TextBlock Text="{TemplateBinding Subject}" VerticalAlignment="Center" Margin="4,0"/>
                         </Border>
                         <Border Grid.Column="1" Background="{TemplateBinding Color}" CornerRadius="{Binding Path=(hc:BorderElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource CornerRadiusSplitConverter},ConverterParameter='0,1,1,0'}">
-                            <ContentPresenter ContentSource="Status" VerticalAlignment="Center" Margin="4,0" TextElement.Foreground="{TemplateBinding Foreground}" ContentStringFormat="{TemplateBinding ContentStringFormat}"/>
+                            <ContentPresenter ContentSource="Status"
+                                              VerticalAlignment="Center"
+                                              Margin="4,0"
+                                              TextElement.Foreground="{TemplateBinding Foreground}"
+                                              ContentStringFormat="{TemplateBinding ContentStringFormat}">
+                                <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                <ContentPresenter.Resources>
+                                    <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                           TargetType="TextBlock">
+                                        <Setter Property="Foreground"
+                                                Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                    </Style>
+                                </ContentPresenter.Resources>
+                            </ContentPresenter>
                         </Border>
                     </Grid>
                 </ControlTemplate>
