--- a/src/Shared/HandyControl_Shared/Themes/Styles/Base/SideMenuBaseStyle.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/Base/SideMenuBaseStyle.xaml
@@ -17,9 +17,33 @@
                             <ContentControl Margin="4,0,0,0">
                                 <DockPanel Margin="{TemplateBinding Padding}">
                                     <ContentControl Width="40" Name="PresenterIcon">
-                                        <ContentPresenter ContentSource="Icon" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        <ContentPresenter ContentSource="Icon"
+                                                          HorizontalAlignment="Center"
+                                                          VerticalAlignment="Center">
+                                            <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                            <ContentPresenter.Resources>
+                                                <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                       TargetType="TextBlock">
+                                                    <Setter Property="Foreground"
+                                                            Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                        </ContentPresenter>
                                     </ContentControl>
-                                    <ContentPresenter Name="PresenterHeader"  ContentSource="Header" Margin="6,0,0,0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+                                    <ContentPresenter Name="PresenterHeader"
+                                                      ContentSource="Header"
+                                                      Margin="6,0,0,0"
+                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
+                                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                        <ContentPresenter.Resources>
+                                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                   TargetType="TextBlock">
+                                                <Setter Property="Foreground"
+                                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                            </Style>
+                                        </ContentPresenter.Resources>
+                                    </ContentPresenter>
                                 </DockPanel>
                             </ContentControl>
                         </hc:SimplePanel>
@@ -55,9 +79,33 @@
                             <ContentControl Margin="4,0,0,0">
                                 <DockPanel Margin="{TemplateBinding Padding}">
                                     <ContentControl Width="40" Name="PresenterIcon">
-                                        <ContentPresenter ContentSource="Icon" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        <ContentPresenter ContentSource="Icon"
+                                                          HorizontalAlignment="Center"
+                                                          VerticalAlignment="Center">
+                                            <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                            <ContentPresenter.Resources>
+                                                <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                       TargetType="TextBlock">
+                                                    <Setter Property="Foreground"
+                                                            Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                        </ContentPresenter>
                                     </ContentControl>
-                                    <ContentPresenter Name="PresenterHeader"  ContentSource="Header" Margin="6,0,0,0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+                                    <ContentPresenter Name="PresenterHeader"
+                                                      ContentSource="Header"
+                                                      Margin="6,0,0,0"
+                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
+                                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                        <ContentPresenter.Resources>
+                                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                   TargetType="TextBlock">
+                                                <Setter Property="Foreground"
+                                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                            </Style>
+                                        </ContentPresenter.Resources>
+                                    </ContentPresenter>
                                 </DockPanel>
                             </ContentControl>
                         </hc:SimplePanel>
@@ -101,9 +149,33 @@
                             <ContentControl Grid.Row="0" Margin="4,0,0,0">
                                 <DockPanel Margin="{TemplateBinding Padding}" Name="PanelHeader" Background="Transparent">
                                     <ContentControl Width="40" Name="PresenterIcon">
-                                        <ContentPresenter ContentSource="Icon" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        <ContentPresenter ContentSource="Icon"
+                                                          HorizontalAlignment="Center"
+                                                          VerticalAlignment="Center">
+                                            <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                            <ContentPresenter.Resources>
+                                                <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                       TargetType="TextBlock">
+                                                    <Setter Property="Foreground"
+                                                            Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                        </ContentPresenter>
                                     </ContentControl>
-                                    <ContentPresenter Name="PresenterHeader" ContentSource="Header" Margin="6,0,0,0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+                                    <ContentPresenter Name="PresenterHeader"
+                                                      ContentSource="Header"
+                                                      Margin="6,0,0,0"
+                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
+                                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                        <ContentPresenter.Resources>
+                                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                   TargetType="TextBlock">
+                                                <Setter Property="Foreground"
+                                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                            </Style>
+                                        </ContentPresenter.Resources>
+                                    </ContentPresenter>
                                 </DockPanel>
                             </ContentControl>
                             <StackPanel Grid.Row="1" x:Name="PART_Panel" Visibility="Collapsed" Height="{Binding PanelAreaLength,RelativeSource={RelativeSource AncestorType=hc:SideMenu}}"/>
@@ -142,9 +214,33 @@
                             <ContentControl Grid.Row="0" Margin="4,0,0,0">
                                 <DockPanel Margin="{TemplateBinding Padding}" Name="PanelHeader" Background="Transparent">
                                     <ContentControl Width="40" Name="PresenterIcon">
-                                        <ContentPresenter ContentSource="Icon" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        <ContentPresenter ContentSource="Icon"
+                                                          HorizontalAlignment="Center"
+                                                          VerticalAlignment="Center">
+                                            <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                            <ContentPresenter.Resources>
+                                                <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                       TargetType="TextBlock">
+                                                    <Setter Property="Foreground"
+                                                            Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                        </ContentPresenter>
                                     </ContentControl>
-                                    <ContentPresenter Name="PresenterHeader" ContentSource="Header" Margin="6,0,0,0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+                                    <ContentPresenter Name="PresenterHeader"
+                                                      ContentSource="Header"
+                                                      Margin="6,0,0,0"
+                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
+                                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                                        <ContentPresenter.Resources>
+                                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                                   TargetType="TextBlock">
+                                                <Setter Property="Foreground"
+                                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                            </Style>
+                                        </ContentPresenter.Resources>
+                                    </ContentPresenter>
                                 </DockPanel>
                             </ContentControl>
                             <ScrollViewer Visibility="{Binding Visibility,ElementName=PART_Panel}" Grid.Row="1" Height="{Binding PanelAreaLength,RelativeSource={RelativeSource AncestorType=hc:SideMenu}}">
