--- a/src/Shared/HandyControl_Shared/Themes/Styles/BlendEffectBox.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/BlendEffectBox.xaml
@@ -5,7 +5,16 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="hc:BlendEffectBox">
-                    <ContentPresenter ContentSource="ActualContent"/>
+                    <ContentPresenter ContentSource="ActualContent">
+                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                        <ContentPresenter.Resources>
+                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                   TargetType="TextBlock">
+                                <Setter Property="Foreground"
+                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                            </Style>
+                        </ContentPresenter.Resources>
+                    </ContentPresenter>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
