--- a/src/Shared/HandyControl_Shared/Themes/Styles/FloatingBlock.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/FloatingBlock.xaml
@@ -7,7 +7,16 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="hc:FloatingBlock">
-                    <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}"/>
+                    <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}">
+                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                        <ContentPresenter.Resources>
+                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                   TargetType="TextBlock">
+                                <Setter Property="Foreground"
+                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                            </Style>
+                        </ContentPresenter.Resources>
+                    </ContentPresenter>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
