--- a/src/Shared/HandyControl_Shared/Themes/Styles/Sprite.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/Sprite.xaml
@@ -13,7 +13,19 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="hc:Sprite">
-                    <ContentPresenter Margin="{TemplateBinding Padding}" hc:WindowAttach.IsDragElement="True" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <ContentPresenter Margin="{TemplateBinding Padding}"
+                                      hc:WindowAttach.IsDragElement="True"
+                                      HorizontalAlignment="Center"
+                                      VerticalAlignment="Center">
+                        <!-- Flag Syncfusion HandyControl StyleCodeConflict -->
+                        <ContentPresenter.Resources>
+                            <Style BasedOn="{StaticResource TextBlockBaseStyle}"
+                                   TargetType="TextBlock">
+                                <Setter Property="Foreground"
+                                        Value="{Binding (TextElement.Foreground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                            </Style>
+                        </ContentPresenter.Resources>
+                    </ContentPresenter>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
